<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">


<item
    android:id="@+id/action_settings"
    android:icon="@drawable/ic_settings_black_24dp"
    app:showAsAction="ifRoom"
    android:title="settings">
    <menu android:id="@+id/sub_menu_settings">
        <item android:id="@+id/theme"
            android:title="@string/theme" />

        <item android:id="@+id/about"
            android:title="@string/about" />
    </menu>
</item>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu_black_24dp"
        app:showAsAction="ifRoom"
        android:title="More">
        <menu android:id="@+id/sub_menu_more">
            <item android:id="@+id/new_list"
                android:title="@string/new_list" />

            <item android:id="@+id/save_list"
                android:title="@string/save_list" />

            <item android:id="@+id/load_list"
                android:title="@string/load_list" />

            <item android:id="@+id/delete_list"
                android:title="@string/delete_list" />
        </menu>
    </item>
</menu>